k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80  # Port exposé pour l'accès public
      targetPort: 5173  # Port sur lequel tourne ton app React/Vite
      nodePort: 30000  # Port accessible depuis l'extérieur
  type: NodePort  # Rend le service accessible depuis l'extérieur
